<resources>
    <string name="app_name">亿订货</string>
    <string name="software_copyright">Copyright © 2015–2017 Yifa Software</string>
    <string name="user_name">请输入您的手机号</string>
    <string name="password">请输入您的验证码</string>
    <string name="login">登录</string>
    <string name="tab_main">首页</string>
    <string name="tab_goods">商品</string>
    <string name="tab_order">订单</string>
    <string name="tab_mine">我的</string>
    <string name="tab_all">全部</string>
    <string name="tab_name">品名</string>
    <string name="tab_num">货号</string>
    <string name="tab_price">价格</string>
    <string name="title_text_save">保存</string>
    <string name="server_configuration">服务器配置</string>
    <string name="main_server">主服务器</string>
    <string name="ip_address">IP地址</string>
    <string name="port">端口</string>
    <string name="key_code">唯一码</string>
    <string name="account_num">账套号</string>
    <string name="get_account">获取账套号</string>
    <string name="select_account">选取账套号</string>
    <string name="account_nothing">无账套号</string>
    <string name="parm_none">参数为空</string>
    <string name="get_account_none">未获取到账套</string>
    <string name="url_is_error">url地址格式有误,请检查</string>
    <string name="cancel">取消</string>
    <string name="activity_finish">完成</string>
    <string name="delete_dialog_title">提示</string>
    <string name="loading_please_wait">加载中，请稍候&#8230;</string>
    <string name="log_in">登录中&#8230;</string>
    <string name="submit_order">提交订单&#8230;</string>
    <string name="logout">注销中&#8230;</string>
    <string name="login_failure">登录失败,</string>
    <string name="load_more">加载中…</string>
    <string name="load_all">已全部加载完毕</string>
    <string name="clear_all">清空</string>
    <string name="shopping_cart">购物车</string>
    <string name="create_order">下单</string>
    <string name="total_amount">金额：</string>
    <string name="ok">确定</string>
    <string name="get_service_info">获取服务器信息</string>
    <string name="test_connect">测试连接</string>
    <string name="connect_server">连接服务器</string>
    <string name="barcode_scanning">扫描二维码</string>
    <string name="close">关闭</string>
    <string name="becareful">注意</string>
    <string name="photo_permission">摄像头权限被关闭,请到设置页应用权限页面打开摄像头权限</string>
    <string name="refuse_photo_permission">权限被拒绝,无法打开摄像头</string>
    <string name="remark">备注</string>
    <string name="receive_method">付款方式</string>
    <string name="address">收货地址</string>
    <string name="create_date">开单日期</string>
    <string name="goods_list">商品清单</string>
    <string name="phone_number">联系电话</string>
    <string name="contact">联系人</string>
    <string name="name">名称</string>SSS
    <string name="total">合计：</string>
    <string name="order_details">订单详情</string>
    <string name="pending_audit">待审核</string>
    <string name="delivery_date">送货时间</string>
    <string name="order_list">订货单</string>
    <string name="draft">草稿</string>
    <string name="tab_already_completed">已完成</string>
    <string name="audit">审核</string>
    <string name="account">记账</string>
    <string name="yifa_software">亿发软件</string>
    <string name="us">了解亿订货</string>
    <string name="return_order">退货订单</string>
    <string name="apply_return">申请退货</string>
    <string name="mine_address">收货地址</string>
    <string name="order_summary">订单汇总</string>
    <string name="about">关于亿订货</string>
    <string name="search_view_product">搜索商品</string>
    <string name="shop_detail">商品详情</string>
    <string name="add_shoppingcart">加入购物车</string>
    <string name="unit">单位</string>
    <string name="order_quantity">订购数量</string>
    <string name="shop_introduction">商品介绍</string>
    <string name="product_parameters">产品参数</string>
    <string name="save_image">保存图片</string>
    <string name="all">全部</string>
    <string name="new_address">新增地址</string>
    <string name="about_us">关于亿订货</string>
    <string name="product_name">产品名称</string>
    <string name="code">编号</string>
    <string name="packing_specifications">包装规格</string>
    <string name="type">类型</string>
    <string name="category">类别</string>
    <string name="brand">品牌</string>
    <string name="user_password">请输入您的密码</string>
    <string name="password_login">密码登录</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="login_password">登录密码</string>
    <string name="set_password">设置密码</string>
    <string name="password_set">密码设置</string>
    <string name="modify_password">修改密码</string>
    <string name="user_new_password">请输入新密码</string>
    <string name="old_password_error">密码错误，请重试</string>
    <string name="password_empty">密码不能为空</string>
    <string name="wheel_dialog_title_deliveryAddress">选择送货地址</string>
    <string name="toast_content_deliveryAddress">未获取到送货地址</string>
</resources>
