<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/content_bg"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.yifarj.yifadinghuobao.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon_left="@drawable/ic_title_back"
        app:title_name="@string/modify_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="旧密码："
        android:textSize="@dimen/font_30"
        android:textColor="@color/main_text"
        android:padding="@dimen/size_30"/>

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:hint="@string/user_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="16"
        android:paddingLeft="@dimen/size_30"
        android:paddingStart="@dimen/size_30"
        android:textColor="@color/black"
        android:textColorHint="#868c94"
        android:textSize="@dimen/font_30"/>

    <TextView
        android:id="@+id/tvOldPwdError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_30"
        android:paddingTop="@dimen/size_10"
        android:text="@string/old_password_error"
        android:visibility="gone"
        android:textColor="@color/main_red"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="新密码："
        android:textSize="@dimen/font_30"
        android:textColor="@color/main_text"
        android:padding="@dimen/size_30"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_100"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:hint="@string/user_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/size_30"
        android:paddingStart="@dimen/size_30"
        android:textColor="@color/black"
        android:textColorHint="#868c94"
        android:textSize="@dimen/font_30"/>

    <TextView
        android:id="@+id/tvNewPwdError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/size_30"
        android:paddingTop="@dimen/size_10"
        android:visibility="gone"
        android:textColor="@color/main_red"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_90"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/size_30"
        android:layout_marginRight="@dimen/size_30"
        android:layout_marginTop="@dimen/size_50"
        android:background="@drawable/corner_btn_ok"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="@dimen/font_30"/>

</LinearLayout>