<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/content_bg"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_360"
            android:background="@color/light_blue">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_mine_info"/>

            <TextView
                android:id="@+id/tvUserPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_6"
                android:textColor="@color/white"
                android:textSize="@dimen/font_28"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.yifarj.yifadinghuobao.view.CustomItem
                android:id="@+id/ciSetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                app:cus_icon_left="@drawable/ic_title_set_pwd"
                app:cus_icon_right="@drawable/ic_list_more"
                app:cus_name="@string/password_set"/>

            <com.yifarj.yifadinghuobao.view.CustomItem
                android:id="@+id/ciAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                app:cus_icon_left="@drawable/ic_title_adress"
                app:cus_icon_right="@drawable/ic_list_more"
                app:cus_name="@string/mine_address"/>

            <com.yifarj.yifadinghuobao.view.CustomItem
                android:id="@+id/ciReturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                app:cus_icon_left="@drawable/ic_title_return"
                app:cus_icon_right="@drawable/ic_list_more"
                app:cus_name="@string/apply_return"/>

            <com.yifarj.yifadinghuobao.view.CustomItem
                android:id="@+id/ciReturnOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                app:cus_icon_left="@drawable/ic_title_return_order"
                app:cus_icon_right="@drawable/ic_list_more"
                app:cus_name="@string/return_order"/>

            <com.yifarj.yifadinghuobao.view.CustomItem
                android:id="@+id/orderSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                app:cus_icon_left="@drawable/ic_order_summary"
                app:cus_icon_right="@drawable/ic_list_more"
                app:cus_name="@string/order_summary"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_110"
            android:layout_marginTop="@dimen/size_20"
            android:background="@drawable/selector_list_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/size_28"
                android:layout_marginStart="@dimen/size_20"
                android:text="@string/about_us"
                android:textColor="#4F4F4F"
                android:textSize="@dimen/font_30"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/size_20"
                android:layout_marginRight="@dimen/size_20"
                android:src="@drawable/ic_list_more"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>