<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <View
        android:id="@+id/viewBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8c000000"/>

    <RelativeLayout
        android:id="@+id/rlDialogBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rlTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/size_20"
                android:text="@string/cancel"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/font_28"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/size_20"
                android:text="@string/delete_dialog_title"
                android:textColor="@color/main_text"
                android:textSize="@dimen/font_30"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/size_20"
                android:text="@string/activity_finish"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/font_28"
                android:textStyle="bold"/>
        </RelativeLayout>

        <com.wx.wheelview.widget.WheelView
            android:id="@+id/wheelView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTitle"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>