<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_blue">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_100"
        android:src="@drawable/login_logo"/>

    <LinearLayout
        android:id="@+id/llInputArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_marginTop="@dimen/size_76"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100"
            android:background="#33ffffff"
            android:gravity="center"
            android:hint="@string/user_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#c1dbf6"
            android:textSize="@dimen/font_30"/>

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100"
            android:layout_marginTop="1dp"
            android:background="#33ffffff"
            android:gravity="center"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#c1dbf6"
            android:textSize="@dimen/font_30"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/size_560"
        android:layout_height="@dimen/size_90"
        android:layout_below="@id/llInputArea"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_40"
        android:background="@drawable/corner_btn"
        android:text="@string/login"
        android:textColor="#1261b6"
        android:textSize="@dimen/font_30"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_login_experience"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/ivConfigure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_login_configure"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_30"
            android:layout_marginTop="@dimen/size_30"
            android:text="@string/software_copyright"
            android:textColor="#33ffffff"
            android:textSize="@dimen/font_20"/>

    </LinearLayout>

</RelativeLayout>